cmake_minimum_required(VERSION 3.24)
project(codes)

set(CMAKE_CXX_STANDARD 14)

# Answers for part 1
add_executable(1_1 1_1.cpp)
add_executable(1_2 1_2.cpp)
add_executable(1_3 1_3.cpp)
add_executable(1_4 1_4.cpp)
add_executable(1_5 1_6.cpp)
add_executable(1_6 1_5.cpp)

# Answers for part 2
add_executable(2_1 2_1.cpp)
add_executable(2_2 2_2.cpp)
add_executable(2_3 2_3.cpp)
add_executable(2_4 2_4.cpp)
add_executable(2_5 2_5.cpp)
add_executable(2_6 2_6.cpp)

# Answers for part 3
add_executable(3_1 3_1.cpp)
add_executable(3_2 3_2.cpp)
add_executable(3_3 3_3.cpp)
add_executable(3_4 3_4.cpp)
add_executable(3_5 3_5.cpp)

# Answers for part 4
add_executable(4_1 4_1.cpp)
add_executable(4_2 4_2.cpp)
add_executable(4_3 4_3.cpp)
add_executable(4_4 4_4.cpp)
add_executable(4_5 4_5.cpp)

# Answers for part 5
add_executable(5_1 5_1.cpp)
add_executable(5_2 5_2.cpp)
add_executable(5_3 5_3.cpp)
add_executable(5_4 5_4.cpp)
add_executable(5_5 5_5.cpp)

# Answers for part 6
add_executable(6_1 6_1.cpp)
add_executable(6_2 6_2.cpp)
add_executable(6_3 6_3.cpp)
add_executable(6_4 6_4.cpp)
add_executable(6_5 6_5.cpp)
add_executable(6_6 6_6.cpp)

# Answers for part 6
add_executable(7_1 7_1.cpp)
add_executable(7_2 7_2.cpp)
add_executable(7_3 7_3.cpp)
add_executable(7_4 7_4.cpp)

# Answers for part 6
add_executable(8_1 8_1.cpp)
add_executable(8_2 8_2.cpp)
add_executable(8_3 8_3.cpp)
add_executable(8_4 8_4.cpp)
add_executable(8_5 8_5.cpp)
add_executable(8_6 8_6.cpp)
add_executable(8_7 8_7.cpp)

# Answers for part 6
add_executable(9_1 9_1.cpp)
add_executable(9_2 9_2.cpp)
add_executable(9_3 9_3.cpp)
add_executable(9_4 9_4.cpp)
add_executable(9_5 9_5.cpp)
add_executable(9_6 9_6.cpp)

# Answers for part 10
add_executable(10_1 10_1.cpp)
add_executable(10_2 10_2.cpp)

